fourth section completed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,28 @@
   </div>
 </section>
 
+<section class="mkp-trail-blaze-section">
+  <div class="mkp-trail-blaze-content">
+    <img
+      src="./assets/images/blaze.svg"
+      alt="Trail Blaze"
+      class="mkp-trail-blaze-image"
+    />
+  </div>
+</section>
+<section class="mkp-two-column-section">
+  <!-- Left Column -->
+  <div class="mkp-column mkp-column-left">
+    <img src="./assets/images/first.png" alt="Left Background" class="mkp-column-bg" />
+    <img src="./assets/icons/button1.png" alt="Button 1" class="mkp-column-overlay-left" />
+  </div>
 
+  <!-- Right Column -->
+  <div class="mkp-column mkp-column-right">
+    <img src="./assets/images/secound.svg" alt="Right Background" class="mkp-column-bg" />
+    <img src="./assets/icons/button2.svg" alt="Button 2" class="mkp-column-overlay-right" />
+  </div>
+</section>
 
 </body>
 </html>
