five sections completed

--- a/index.html
+++ b/index.html
@@ -130,5 +130,47 @@
   </div>
 </section>
 
+<section class="mkp-gear-section">
+  <div class="mkp-gear-grid">
+
+    <!-- LEFT COLUMN (IMAGE) -->
+    <div class="mkp-gear-left">
+      <img
+        src="./assets/images/left5.svg"
+        alt="Mountain Gear"
+        class="mkp-gear-left-image"
+      />
+    </div>
+
+    <!-- RIGHT COLUMN (CONTENT) -->
+    <div class="mkp-gear-right">
+
+      <h2 class="mkp-gear-title">
+        UK-Made Gear for Serious Mountain Performance
+      </h2>
+
+      <p class="mkp-gear-text">
+        Mountain King is a premier UK brand specialising in high-performance trekking
+        and trail running poles, crafted for ultra runners, mountaineers, and outdoor
+        enthusiasts. With over 30 years of innovation, our lightweight, durable, and
+        reliable poles excel in the most extreme conditions.
+        <br /><br />
+        Every pole is built in our North of England factory with performance at the
+        forefront. Our gear is designed to withstand the toughest trails and endurance
+        challenges.
+      </p>
+
+      <img
+        src="./assets/images/below5.svg"
+        alt="Additional Gear"
+        class="mkp-gear-bottom-image"
+      />
+
+    </div>
+
+  </div>
+</section>
+
+
 </body>
 </html>
