--- a/index.html
+++ b/index.html
@@ -160,10 +160,18 @@
         challenges.
       </p>
 
+       <!-- Desktop image -->
       <img
         src="./assets/images/below5.svg"
         alt="Additional Gear"
-        class="mkp-gear-bottom-image"
+        class="mkp-gear-bottom-image desktop-image"
+      />
+
+      <!-- Mobile image -->
+      <img
+        src="./assets/icons/mob.svg"
+        alt="Additional Gear Mobile"
+        class="mkp-gear-bottom-image mobile-image"
       />
 
     </div>
